# actinia-tiling-plugin

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tests_with_kvdb.sh  tests_with_redis.sh
.github/workflows/: flake8.yml  test.yml
config/mount/: sample.ini
docker/: Dockerfile  actinia.cfg  docker-compose.yml
docker/actinia-tiling-plugin-test/: Dockerfile  actinia-tiling-plugin-test.cfg
src/actinia_tiling_plugin/: __init__.py  endpoints.py  wsgi.py
src/actinia_tiling_plugin/api/: helloworld.py  merge_list.py  tiling_list.py
src/actinia_tiling_plugin/api/merge/: patch_merge.py
src/actinia_tiling_plugin/api/tiling/: tiling_grid.py
src/actinia_tiling_plugin/apidocs/: helloworld.py  merge.py  tiling.py
src/actinia_tiling_plugin/model/: response_models.py
src/actinia_tiling_plugin/models/: response_models.py
src/actinia_tiling_plugin/models/response_models/: general.py  merge.py  tiling.py
src/actinia_tiling_plugin/resources/: config.py  logging.py  processes.py  templating.py
src/actinia_tiling_plugin/templates/: __init__.py  pc_create_grid.json  pc_delete_vector.json  pc_extract_grid.json
test_postbodies/: grid_1_calulation.json  grid_2_calulation.json  grid_3_calulation.json  grid_tiling_pb.json  patch_merge.json  patch_merge_no_mapset_deletion.json  set_region_for_epsg25832.json
tests/: conftest.py  test_resource_base.py  testsuite.py
tests/integrationtests/: test_grid_tiling.py  test_list_merge.py  test_list_tiling.py  test_patch_merge.py
tests/unittests/: test_transformation.py
(+5 files in other folders)
